# kernle-devtools

./: README.md  pyproject.toml
.github/workflows/: auto-project.yml  project-status-sync.yml
kernle_devtools/: __init__.py  parsers.py  plugin.py
kernle_devtools/admin_health/: __init__.py  diagnostics.py
kernle_devtools/cli/: __init__.py  dashboard.py
kernle_devtools/dashboard/: __init__.py  server.py  templates.py
tests/: conftest.py  test_admin_health.py  test_dashboard.py  test_parsers.py
